# device_platform

./: .gitignore  项目手册.md
example/weather_timer/: partitions.csv  sdkconfig  sdkconfig.old
example/weather_timer/main/: CMakeLists.txt  idf_component.yml  main.c  user_config.h
example/weather_timer/main/app/: app_2048.c  app_API.c  app_dir.c  app_game.c  app_init.c  app_music.c  app_set.c  app_sr.c  app_ui.c  app_weather_ui.c  app_wifi.c
example/weather_timer/main/app/inc/: app_2048.h  app_API.h  app_dir.h  app_game.h  app_init.h  app_music.h  app_set.h  app_timer.h  app_ui.h  app_weather_ui.h  app_wifi.h
example/weather_timer/main/bsp/: qmc5883l.c  qmi8658c.c  sd_card.c  wifi.c
example/weather_timer/main/bsp/general/: extend_io.c  extend_io.h  soft_i2c.h
example/weather_timer/main/bsp/inc/: camera.h  device_bsp.h  gxhtc3.h  lcd.h  music.h  qmc5883l.h  qmi8658c.h  sd_card.h  ttv.h  wifi.h
example/weather_timer/main/data/: five.c  font_beijing.c  grab.c
example/weather_timer/main/dev/: device_manage.c  device_manage.h  device_platform.c  device_platform.h
src/: app_ui.c  app_ui.h  device_manage.c  device_manage.h  device_platform.c  device_platform.h
src/bsp/: camera.c  gxhtc3.c  lcd.c  music.c  qmi8658c.c  ttv.c
src/bsp/general/: gen_i2c.c  gen_i2c.h  soft_i2c.c
src/bsp/inc/: device_bsp.h  music.h  sd_card.h
